--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -42,7 +42,8 @@
                 position: relative;
 
                 .icon{
-                    font-size: 20px;;
+                    font-size: 20px;
+                    cursor: pointer;
                 }
 
                 .avatar{
